# RAG-Local-Desktop-APP

./: .gitignore  AUDITORIA_PRACTICAS_SENIOR_LOCAL_RAG.md  README.md  pyproject.toml
.atl/: skill-registry.md
core/: README.md  env.example  main.py  pyproject.toml
core/data/: .gitkeep  rag.db
core/data/chroma/: chroma.sqlite3
core/s3/: .gitkeep
core/services/: download_models.py
core/src/: api.py  chunking.py  config.py  contracts.py  observability.py
core/src/rag/: chunking.py  embedding.py  generation.py  ingestion.py  rerank.py  retrieval.py
core/src/stores/: lexical_store.py  vector_store.py
core/tests/: e2e_eval_runner.py  golden_set.jsonl  test_chunking.py  test_config_model_path.py  test_contracts.py  test_e2e_evaluation.py  test_e2e_goldenset_contract.py  test_generation.py  test_integration_ingestion.py  test_integration_query_citations.py  test_observability_logging.py  test_rerank.py
core/tests/fakes/: chunking.py
docs/: FLUJO_SISTEMA_LOCAL_RAG.md
ui/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
ui/src/: App.tsx  index.css  main.tsx
ui/src/api/: client.ts
ui/src/components/: answer-display.tsx  document-library.tsx  query-panel.tsx  upload-panel.tsx
ui/src/components/ui/: badge.tsx  button.tsx  card.tsx
ui/src/hooks/: use-documents.ts  use-query-rag.ts  use-upload.ts
ui/src/types/: api.ts
