[project]
name = "core"
version = "0.1.0"
description = "Local-first RAG service with FastAPI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=0.5.5",
    "docling>=2.26.0",
    "fastapi>=0.115.0",
    "huggingface-hub>=1.9.1",
    "llama-cpp-python>=0.3.0",
    "prometheus-client>=0.21.0",
    "pydantic>=2.9.0",
    "python-multipart>=0.0.9",
    "pydantic-settings>=2.4.0",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=3.0.1",
    "structlog>=24.4.0",
    "uvicorn>=0.30.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
]

[tool.uv]
extra-index-url = ["https://abetlen.github.io/llama-cpp-python/whl/cpu"]
index-strategy = "unsafe-best-match"
